--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,8 @@ on:
   push:
    #  branches:
    #   - main
-  schedule:
-    - cron: '0 9 * * 1'
+  #schedule:
+  #  - cron: '0 9 * * 1'
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
